# sframe

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
.claude/: settings.local.json
.github/workflows/: build.yml  style.yaml
alternatives/BORINGSSL/: vcpkg.json
alternatives/OPENSSL_1_1/: vcpkg.json
alternatives/OPENSSL_3/: vcpkg.json
cmake/: FindSTM32Cryptographic.cmake  namespace.h.in
fuzz/: CMakeLists.txt  fuzz_header.cpp  fuzz_unprotect.cpp
include/sframe/: map.h  result.h  sframe.h  vector.h
scripts/: known-answer-test.go
src/: crypto.cpp  crypto.h  crypto_boringssl.cpp  crypto_openssl11.cpp  crypto_openssl3.cpp  crypto_stm32.cpp  header.cpp  header.h  result.cpp  sframe.cpp
test/: CMakeLists.txt  Makefile  common.cpp  common.h  header.cpp  sframe.cpp  vectors.cpp
